[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = {path = "../entity"}
migration = {path = "../migration"}

sea-orm = {version = "0.12" , features = ["runtime-tokio-rustls","sqlx-mysql","macros"] }
tonic = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.5"
log = "0.4"
